page(obr): Progress commit

--- a/obr.htm
+++ b/obr.htm
@@ -15,7 +15,8 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@400;700&family=Sarabun:wght@400;700&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 
@@ -65,7 +66,7 @@
 
 			<!-- Text Block 1 -->
 			<div class="mb-4 md:col-start-1 md:row-start-1">
-				<div class="font-xs font-semibold text-navy">EASY FINANCING FOR HOME & BUSINESS OWNERS</div>
+				<div class="font-xs font-semibold text-navy uppercase">Easy financing for home & business owners</div>
 				<div class="text-gray-dark font-serif text-4xl">Save Today on High-Efficiency Energy Upgrades</div>
 			</div>
 
@@ -73,6 +74,8 @@
 			<div class=" md:col-start-2 md:row-start-1 md:row-span-2">
 				<div class="relative mb-6 h-44 rounded-lg border border-gray md:h-full">
 					<img src="https://placehold.co/600x400/transparent/333?text=Install+Pic" alt=""
+						class="absolute inset-0 object-cover object-center w-full h-full rounded-lg">
+					<img src="assets/images/fpo-solar-panel-installer.jpg" alt=""
 						class="absolute inset-0 object-cover object-center w-full h-full rounded-lg">
 				</div>
 			</div>
@@ -95,51 +98,44 @@
 
 	<!-- Highlights -->
 	<section class="pt-8 pb-6 bg-[#E1E9BC] md:py-8 relative">
-		<div class="swiper swiper-key-points pb-12 md:grid md:gap-4 md:grid-cols-3 md:place-content-center">
-			<div class="swiper-wrapper md:contents">
-
+		<div class="swiper swiper-key-points md:grid md:gap-4 md:grid-cols-3 md:place-content-center">
+			<div class="swiper-wrapper xl:contents">
 				<div class="swiper-slide flex flex-col items-center">
-					<div class="flex flex-col gap-y-4 items-center max-w-40">
-						<div class="">
+					<div class="mx-8 flex gap-4 items-center h-full">
+						<div class="flex-shrink-0">
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/member/icon-no-money.png"
-								alt="" class="h-24">
+								alt="" class="w-24">
 						</div>
-						<div class="px-4 text-center text-balance">
+						<div class="text-balance">
 							NO MONEY DOWN,
 							NO CREDIT CHECK,
 							NO LOANS
 						</div>
-
 					</div>
-
 				</div>
 				<div class="swiper-slide flex flex-col items-center">
-					<div class="flex flex-col gap-y-4 items-center max-w-40">
-						<div class="">
+					<div class="mx-8 flex gap-4 items-center h-full">
+						<div class="flex-shrink-0">
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/member/icon-rate-chart.png"
-								alt="" class="h-24 ml-2">
+								alt="" class="w-24">
 						</div>
-						<div class="px-4 text-center text-balance">INTEREST RATES
+						<div class="text-balance">INTEREST RATES
 							THAT WON’T
 							EXCEED 5%
 						</div>
-
 					</div>
-
 				</div>
 				<div class="swiper-slide flex flex-col items-center">
-					<div class="flex flex-col gap-y-4 items-center max-w-40">
-						<div class="">
+					<div class="mx-8 flex gap-4 items-center h-full">
+						<div class="flex-shrink-0">
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/member/icon-shield-with-star.png"
-								alt="" class="h-24">
+								alt="" class="w-24">
 						</div>
-						<div class="px-4 text-center text-balance">FULLY SCREENED
+						<div class="text-balance">FULLY SCREENED
 							TRUSTED
 							CONTRACTORS
 						</div>
-
 					</div>
-
 				</div>
 			</div>
 			<div class="swiper-pagination h-6 md:hidden"></div>
@@ -154,55 +150,40 @@
 
 	<!-- Form Intro -->
 	<section class="px-8 pb-4 pt-20 text-center sm:grid sm:place-content-center" style="background-color: #F5F5F5;">
-		<div class="max-w-2xl space-y-4">
-			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">
-				Get started with On-Bill Repayment
-			</h2>
-			<p class="text-balance">
-				<span class="text-lg font-semibold font-serif text-wrap-balance">What is On-Bill Repayment and How to
-					Get Started</span><br>
-				The On-Bill Repayment Program makes energy efficiency and electrification upgrades more accessible for
-				homeowners,
-				business owners, schools, and agricultural producers by connecting them to rebates, financing,
-				education, qualified
-				contractors, equipment, and energy audits.
-			</p>
-			<p class="text-balance">
-				To get started, please review the table below to see whether you qualify for additional programs or
-				discounts based on
-				your income. We want to make sure we’re offering you the lowest cost option possible!
-			</p>
-		</div>
-	</section>
+		<div class="max-w-xl space-y-4">
+			<div class="mb-4 md:col-start-1 md:row-start-1">
+				<div class="font-xs font-semibold text-navy uppercase">How to apply</div>
+				<p class="text-gray-dark font-serif text-4xl">See what energy upgrades are available to you, today.
+				</p>
+			</div>
+			<p class="mb-4">If you are eligible, complete our interest form by selecting your co-op service territory
+				from the provided list. After
+				submission, you'll receive communications primarily from the Collective Clean Energy Fund and Zero Homes
+				about the
+				personalized financing opportunities available to you. <strong>Am I eligible?</strong></p>
 
-
-	<section class="px-8 pb-20 text-center" style="background-color: #F5F5F5;">
-		<p class="text-balance">
-			If you do not qualify, simply complete the interest form by selecting your co-op from the provided list
-			below.
-			After
-			submission, you'll receive communications primarily from the Collective Clean Energy Fund and Zero Homes—be
-			sure
-			to
-			check your email, including spam and junk folders, for important updates and next steps.
-		</p>
-		<p>Have questions? Call <span class="inline-block">720-263-2313</span></p>
-		<div class="grid place-items-center">
-			<div class="relative">
-				<select class="text-lg p-2 mt-8" data-coop-select>
-					<option value="0">Select Your Co-Op</option>
-				</select>
-				<div class="size-8 mt-8 loading-spinner hidden" data-loading>
-
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="">
-						<path class="fa-secondary" opacity=".4"
-							d="M65.6 414.4c0 8.2 3.1 16.4 9.4 22.6c12.5 12.5 32.8 12.5 45.3 0l45.3-45.3c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L75 391.8c-6.2 6.2-9.4 14.4-9.4 22.6zM224 416l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32s-32 14.3-32 32zM346.5 120.2c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L437 120.2c12.5-12.5 12.5-32.8 0-45.3c-6.2-6.2-14.4-9.4-22.6-9.4s-16.4 3.1-22.6 9.4l-45.3 45.3zm0 226.3c-12.5 12.5-12.5 32.8 0 45.3L391.8 437c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-45.3-45.3c-12.5-12.5-32.8-12.5-45.3 0zM384 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32z" />
-						<path class="fa-primary"
-							d="M256 0c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32zM0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32zM120.2 75C107.7 62.5 87.5 62.5 75 75s-12.5 32.8 0 45.3l45.3 45.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L120.2 75z" />
-					</svg>
-				</div>
+			<div class="flex flex-wrap justify-center gap-2">
+				<a href="#"
+					class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none hover:bg-green/70 hover:text-black ">Gunnison
+					County</a>
+				<a href="#"
+					class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none hover:bg-green/70 hover:text-black ">Highline</a>
+				<a href="#"
+					class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none hover:bg-green/70 hover:text-black ">Mountain
+					View</a>
+				<a href="#"
+					class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none hover:bg-green/70 hover:text-black ">San
+					Luis Valley</a>
+				<a href="#"
+					class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none hover:bg-green/70 hover:text-black ">Sangre
+					de Cristo</a>
+				<a href="#"
+					class="inline-block rounded-full py-2 px-3 border border-solid border-green no-underline leading-none hover:bg-green/70 hover:text-black ">White
+					River</a>
 			</div>
 		</div>
+
+
 	</section>
 	<section style="background-color: #F5F5F5;">
 		<div data-zoho-container></div>
