--- a/obr.htm
+++ b/obr.htm
@@ -62,7 +62,7 @@
 	<!-- Pitch -->
 	<section class="relative p-6 text-center grid place-items-center md:py-8">
 
-		<div class="px-auto max-w-3xl md:grid md:grid-cols-2 md:gap-x-24 md:text-left">
+		<div class="px-auto max-w-3xl md:grid md:grid-cols-2 md:gap-x-16 md:text-left">
 
 			<!-- Text Block 1 -->
 			<div class="mb-4 md:col-start-1 md:row-start-1">
@@ -98,13 +98,14 @@
 
 	<!-- Highlights -->
 	<section class="pt-8 pb-6 bg-[#E1E9BC] md:py-8 relative">
-		<div class="swiper swiper-key-points md:grid md:gap-4 md:grid-cols-3 md:place-content-center">
-			<div class="swiper-wrapper xl:contents">
+		<div class="swiper swiper-key-points">
+			<div class="swiper-wrapper md:grid md:gap-4 md:grid-cols-3 md:place-content-center">
 				<div class="swiper-slide flex flex-col items-center">
-					<div class="mx-8 flex gap-4 items-center h-full">
+					<div
+						class="mx-8 flex gap-4 items-center h-full md:flex-col md:text-center lg:flex-row lg:text-left">
 						<div class="flex-shrink-0">
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/member/icon-no-money.png"
-								alt="" class="w-24">
+								alt="" class="w-24 md:w-auto md:h-24 lg:w-24 lg:h-auto">
 						</div>
 						<div class="text-balance">
 							NO MONEY DOWN,
@@ -114,10 +115,11 @@
 					</div>
 				</div>
 				<div class="swiper-slide flex flex-col items-center">
-					<div class="mx-8 flex gap-4 items-center h-full">
+					<div
+						class="mx-8 flex gap-4 items-center h-full md:flex-col md:text-center lg:flex-row lg:text-left">
 						<div class="flex-shrink-0">
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/member/icon-rate-chart.png"
-								alt="" class="w-24">
+								alt="" class="w-24 md:w-auto md:h-24 lg:w-24 lg:h-auto">
 						</div>
 						<div class="text-balance">INTEREST RATES
 							THAT WON’T
@@ -126,10 +128,11 @@
 					</div>
 				</div>
 				<div class="swiper-slide flex flex-col items-center">
-					<div class="mx-8 flex gap-4 items-center h-full">
+					<div
+						class="mx-8 flex gap-4 items-center h-full md:flex-col md:text-center lg:flex-row lg:text-left">
 						<div class="flex-shrink-0">
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/member/icon-shield-with-star.png"
-								alt="" class="w-24">
+								alt="" class="w-24 md:w-auto md:h-24 lg:w-24 lg:h-auto">
 						</div>
 						<div class="text-balance">FULLY SCREENED
 							TRUSTED
@@ -183,6 +186,8 @@
 			</div>
 		</div>
 	</section>
+
+
 	<section class="grid" style="background-color: #F5F5F5;"> <!-- Background Layer: Form screenshot -->
 		<div class="relative col-start-1 row-start-1 flex justify-center overflow-hidden">
 			<img src="assets/images/form-desktop.png" alt="" class="absolute w-4/5 h-auto max-w-3xl hideme md:block" />
