--- a/obr.htm
+++ b/obr.htm
@@ -187,23 +187,24 @@
 		</div>
 	</section>
 
-
-	<section class="grid" style="background-color: #F5F5F5;"> <!-- Background Layer: Form screenshot -->
+	<!-- Peek -->
+	<section class="grid" style="background-color: #F5F5F5;" data-peek> <!-- Background Layer: Form screenshot -->
 		<div class="relative col-start-1 row-start-1 flex justify-center overflow-hidden">
-			<img src="assets/images/form-desktop.png" alt="" class="absolute w-4/5 h-auto max-w-3xl hideme md:block" />
-			<img src="assets/images/form-mobile.png" alt="" class="absolute w-4/5 h-auto md:hideme" />
+			<img src="assets/images/form-desktop.png" alt="" class="absolute w-4/5 h-auto max-w-3xl hideme md:block"
+				data-screenshot />
+			<img src="assets/images/form-mobile.png" alt="" class="absolute w-4/5 h-auto md:hideme" data-screenshot />
 		</div>
 
 		<!-- Middle Layer: Green triangle -->
 		<div class="col-start-1 row-start-1 relative">
-			<div class="md:hideme absolute inset-0 bg-green opacity-90"
-				style="clip-path: polygon(100% 50%, 100% 0%, 100% 100%, 0% 100%);">
+			<div class="absolute h-full w-full bottom-0 bg-green opacity-90 md:hideme"
+				style="clip-path: polygon(100% 50%, 100% 0%, 100% 100%, 0% 100%);" data-triangle>
 				<div
 					class="bg-connections-l h-2/3 w-full bg-no-repeat absolute bottom-0 left-full origin-bottom-left -rotate-90 opacity-45">
 				</div>
 			</div>
-			<div class="hideme md:block absolute inset-0 bg-green opacity-90"
-				style="clip-path: polygon(100% 0%, 100% 0%, 100% 100%, 0% 100%);">
+			<div class="hideme absolute h-full w-full bottom-0 bg-green opacity-90 md:block"
+				style="clip-path: polygon(100% 0%, 100% 0%, 100% 100%, 0% 100%);" data-triangle>
 				<div
 					class="bg-connections-l h-96 w-full bg-no-repeat absolute bottom-0 left-full origin-bottom-left -rotate-90 opacity-45">
 				</div>
@@ -214,11 +215,11 @@
 				<div class="w-1/2 py-8 pr-8 flex flex-col justify-center items-end text-center space-y-6 md:w-3/5">
 					<!-- Blue badge -->
 					<div class=" flex-shrink-0">
-						<img src="assets/images/obr-badge.svg" alt="" class="size-52 mr-12" />
+						<img src="assets/images/obr-badge.svg" alt="" class="size-52 mr-12" data-cta-badge />
 					</div>
 
 					<!-- Phone CTA -->
-					<div class="text-navy text-center hideme md:flex md:items-center md:gap-2">
+					<div class="text-navy text-center hideme md:flex md:items-center md:gap-2" data-cta-text>
 						<div class="text-xs font-semibold uppercase tracking-wide">HAVE A QUESTION? CALL US:</div>
 						<div class="font-serif text-xl font-bold mt-1">720-263-2313</div>
 					</div>
@@ -226,7 +227,7 @@
 			</div>
 	</section>
 
-
+	<!-- Form container -->
 	<section style="background-color: #F5F5F5;">
 		<div data-zoho-container></div>
 	</section>
@@ -653,7 +654,6 @@
 
 	function toggleSwiper() {
 		const isMobile = window.matchMedia('(max-width: 767px)').matches;
-		console.log({ isMobile });
 
 		if (isMobile) {
 			if (!swiperInstance) {
@@ -704,7 +704,7 @@
 
 	}
 </script>
-
+<script src="assets/js/obr-form-reveal.js"></script>
 <script>
 	console.log(gsap);
 	// gsap.to("[data-sticky]", {
