--- a/obr.htm
+++ b/obr.htm
@@ -258,8 +258,8 @@
 
 
 	<!-- Video Columns -->
-	<section class="min-h-96 bg-gray sm:grid sm:grid-cols-2">
-		<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:order-2"><img
+	<section class="min-h-96 sm:grid sm:grid-cols-5">
+		<div class="relative grid aspect-video place-content-center sm:col-span-2 sm:aspect-auto"><img
 				alt="Don't Choose Between Magic Land and Home Upgrades | Upgrade Home Installation for Energy Efficiency"
 				class="absolute size-full object-cover"
 				src="https://tristate.coop/sites/default/files/images/electrify-and-save/2024/happy-family-extended-900x600.webp" />
@@ -269,25 +269,54 @@
 					src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg" /> </a>
 		</div>
 
-		<div class="gap-4 px-8 py-16 grid place-content-center sm:py-16 sm:px-6 sm:order-1 lg:p-16">
-			<p><strong>HOME UPGRADES WITH NO UPFRONT COST</strong><br />
-				From windows, doors, and insulation to heat pumps, there are tons of affordable upgrades available for
-				your
-				home or business.</p>
+		<div class="gap-4 px-8 py-16 grid place-content-center sm:col-span-3 sm:py-16 sm:px-6 lg:p-16">
 
-			<p><strong>AM I ELIGIBLE?</strong></p>
+			<div class="text-3xl font-serif">Empowering consumers to <strong>reduce</strong> their emissions and energy
+				costs.</div>
 
-			<ul class="list-disc text-base ml-6 -mt-4">
-				<li>Be the owner of a property in a participating Co-Op service territory with a valid account</li>
-				<li>Have 12 consecutive months of payments without a shut off notice</li>
-				<li>Have no late penalties for the previous 6 consecutive months, unless member agress to enroll in
-					autopay
-				</li>
-			</ul>
+			<div>We’re increasing our members’ access to energy efficient technologies and upgrades for both residential
+				and commercial
+				end consumers by connecting them to rebates, financing, education, qualified contractors, equipment, and
+				energy audits.
+				Our On-Bill Repayment Program addresses gaps in loan availability so you can make clean energy
+				improvements.</div>
 
-			<p><a class="block items-center gap-2 border border-solid rounded-full px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex"
+
+
+			<div><a class="block items-center gap-2 border border-solid rounded-full px-4 py-2 leading-none font-normal no-underline transition-transform text-black text-center md:inline-flex"
 					href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20OBR%20FAQ.pdf"
-					target="_blank">Learn More </a></p>
+					target="_blank">Learn More </a></div>
+		</div>
+	</section>
+
+
+	<!-- No cost -->
+	<section class="min-h-96 bg-gray sm:grid sm:grid-cols-5">
+
+		<div class="relative aspect-video sm:aspect-auto sm:h-full sm:col-span-2 sm:order-last">
+			<img src="assets/images/fpo-solar-in-field.jpg" alt="FPO"
+				class="absolute inset-0 w-full h-full object-cover" />
+		</div>
+
+		<div class="gap-4 px-8 py-16 grid place-content-center sm:col-span-3 sm:py-16 sm:px-6 lg:p-16">
+
+			<div class="text-3xl font-serif">See if you qualify for a <strong>no-cost</strong> option.</div>
+
+			<div>We’re glad you’re interested in the Electrify & Save On-Bill Repayment Program—however, you may qualify
+				for free energy
+				efficiency and electrification services based on your income. please review the table below to see
+				whether you qualify
+				for additional programs or discounts based on your income. We want to make sure we’re offering you the
+				lowest cost
+				option possible!</div>
+
+
+
+			<div><a class="block items-center gap-2 border border-solid rounded-full px-4 py-2 leading-none font-normal no-underline transition-transform text-black text-center md:inline-flex"
+					href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20OBR%20FAQ.pdf"
+					target="_blank">Review income chart </a></div>
+		</div>
+	</section>
 		</div>
 	</section>
 
